# Decentralised-Social

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: .npmrc  README.md  config-overrides.js  package-lock.json  package.json  tailwind.config.js
app/config/: webpack.config.js
app/public/: index.html  manifest.json
app/src/: App.tsx  Router.tsx  constants.ts  index.css  index.tsx
programs/align-governance/: Cargo.toml  README.md
programs/align-governance/src/: constants.rs  error.rs  lib.rs
programs/align-governance/src/instructions/: add_instruction.rs  add_transaction.rs  cast_council_vote.rs  cast_rank.rs  claim_reputation.rs  create_organisation.rs  create_proposal.rs  create_sub_organisation.rs  create_token_governance.rs  execute_transaction.rs  finish_proposal_service.rs  join_organisation.rs  mod.rs  push_proposal_state.rs  review_proposal.rs  stage_proposal_for_ranking.rs  stake_nft.rs  unstake_nft.rs
programs/align-governance/src/state/: contribution_record.rs  council_manager.rs  election_manager.rs  governance_account.rs  mod.rs  native_treasury_account.rs  organisaton.rs  proposal.rs  reputation.rs  sub_organisation.rs  transactions.rs
programs/identifiers/: Cargo.toml  README.md
programs/leaf/: Cargo.toml  README.md
programs/multigraph/: Cargo.toml  README.md
programs/profiles/: Cargo.toml  README.md
sdk/: .gitignore  .npmignore  package-lock.json  package.json  tsconfig.json
sdk/src/: api.ts  index.ts  (+6 more)
tests/: alignGovernance.spec.ts  alignGovernance.ts  decentralised-social.ts  helpers.ts  identifiers.ts
(+36 files in other folders)
