[package]
name = "align-governance"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "align_governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
identifiers = { path="../identifiers",  features = ["no-entrypoint",  "cpi"] }
multigraph = { path="../multigraph",  features = ["no-entrypoint",  "cpi"] }
