[package]
name = "align-governance"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "align_governance"

[features]
default = ["int_log"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
int_log = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
mpl-token-metadata = { version = "1.3.2", features = ["no-entrypoint"] }
identifiers = { path="../identifiers",  features = ["no-entrypoint",  "cpi"] }
multigraph = { path="../multigraph",  features = ["no-entrypoint",  "cpi"] }
